--- a/check/main.css
+++ b/check/main.css
@@ -1,3 +1,4 @@
+
 body
 {
     margin:0;
@@ -7,10 +8,20 @@ body
 }
 .nav
 {
+	position:relative;
+	color:red;
     background: #123;
     height:10vh;
     max-width: 100vw;
     z-index: 1;
+}
+.nav span
+{
+padding:0.5em;
+position:absolute;
+color:white;
+right:2.8em;
+font-size:2em;
 }
 .left{
     
@@ -52,4 +63,10 @@ table{
     border-radius: 20px;
     padding:1rem;
     
+}
+#time
+{
+	position:absolute;
+	right:0;
+	color:red;
 }
