--- a/main.css
+++ b/main.css
@@ -44,6 +44,7 @@ input{
 }
 .container {
 	background-color: #fff;
+	font-family: 'Roboto', sans-serif;
 	border-radius: 10px;
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
 			0 10px 10px rgba(0,0,0,0.22);
