--- a/main.css
+++ b/main.css
@@ -1,12 +1,3 @@
-body {
-	background: #f6f5f7;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	height: 100vh;
-	margin: -20px 0 50px;
-}
 h3{
     padding: 0% 15%;
 }
@@ -48,8 +39,8 @@ input{
 	border-radius: 10px;
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
 			0 10px 10px rgba(0,0,0,0.22);
-	position: relative;
-	overflow: hidden;
+	position: absolute;
+	overflow: hidden;	
 	width: 768px;
 	max-width: 100%;
 	min-height: 480px;
@@ -96,3 +87,20 @@ input{
     max-width: 50%;	
 	text-align: center;
 }
+#particles-js{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	background-color: #4b4b4b;
+	min-height: 100%;
+	min-width: 1024px;
+	width: 100%;
+	height: auto;
+	background-repeat: no-repeat center center;
+	position: fixed;
+	top: 0%;
+	left: 0%;
+}
+  
+	
