--- a/main.css
+++ b/main.css
@@ -105,6 +105,23 @@ input{
 	z-index: 3;
 	display: none;
 }
+#psudo-alert-false{
+	justify-content: center;
+	align-items: center;
+	background: #000;
+	color: #FFF;
+	text-align: center;
+	border-radius: 10px;
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+		  0 10px 10px rgba(0,0,0,0.22);
+  	position: absolute;
+  	overflow: hidden;
+	max-width: 50%;
+  	padding: 2.5em;
+  	top:25%;
+	z-index: 3;
+	display: none;
+}
 #whiteb
 {
 	display: none;
