--- a/umain.css
+++ b/umain.css
@@ -1,3 +1,6 @@
+*{
+    font-family: 'Roboto', sans-serif;
+}
 body{
     background-color: #bbb;
     margin: 0;
@@ -99,25 +102,44 @@ ul{
     width: 90%;
 }
 #stab{
+    display: block;
     background-color: #eee;
     border: none;
-    border-radius: 10px;
+    scrollbar-color: #888 #dbdad4;
+    scrollbar-width: thin;
+    scrollba
+    /* border-radius: 10px; */
     position: absolute;
     margin: 5%;
     width: 70%;
     text-align: center;
+    height: 80%;
+    overflow-y: auto;
     border-collapse: collapse;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
 			0 10px 10px rgba(0,0,0,0.22);
 }
 #stab th{
+    padding: 0em 2.5em;
     background-color: #000;
     color: white;
     font-size: 1.3em;
 }
-#tr{
-    border-radius: 0px 10px 0px 0px;
+#stab tr:nth-child(odd) {
+    background: #d4d1d1;
+} 
+#stab tr:nth-child(even) {
+    background: #eee;
 }
-#tl{
-    border-radius: 10px 0px 0px 0px;
+::-webkit-scrollbar {
+    width: 5px;
+}
+::-webkit-scrollbar-track {
+    background: #dbdad4; 
+}
+::-webkit-scrollbar-thumb {
+    background: #888; 
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
 }
