--- a/umain.css
+++ b/umain.css
@@ -2,7 +2,10 @@
     font-family: 'Roboto', sans-serif;
 }
 body{
-    background-color: #bbb;
+    background-image:url(https://backgroundcheckall.com/wp-content/uploads/2017/12/technical-background-images-for-websites-3.jpg);
+    background-repeat:no-repeat;
+    background-size: cover;
+    overflow: hidden;
     margin: 0;
     padding: 0;
 }
@@ -59,7 +62,7 @@ button{
 	display: inline-block;
     border: none;
     border-radius: 25rem;
-    padding: 0.9em 4em;
+    padding: 0.9em 2em;
     width: 75%;
 	font-size: 0.8em;
 	font-weight: bold;
@@ -81,9 +84,9 @@ ul{
 }
 #scores{
     left: 25%;
-    width: 90%;
     height: 100%;
     position: absolute;
+    width: 70%;
     z-index: -1;
 }
 #t1,#t2{
@@ -101,34 +104,32 @@ ul{
     border-radius: 20px;
     width: 90%;
 }
-#stab{
+.tab1{
+    top:50%;
+    position:absolute;
+    height: 30%;
     display: block;
     background-color: #eee;
     border: none;
     scrollbar-color: #888 #dbdad4;
     scrollbar-width: thin;
-    scrollba
-    /* border-radius: 10px; */
-    position: absolute;
-    margin: 5%;
-    width: 70%;
     text-align: center;
-    height: 80%;
     overflow-y: auto;
     border-collapse: collapse;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
 			0 10px 10px rgba(0,0,0,0.22);
+    
 }
-#stab th{
-    padding: 0em 2.5em;
+.tab1 th{
+    padding: 0em 2em;
     background-color: #000;
     color: white;
     font-size: 1.3em;
 }
-#stab tr:nth-child(odd) {
+.tab1 tr:nth-child(odd) {
     background: #d4d1d1;
 } 
-#stab tr:nth-child(even) {
+.tab1 tr:nth-child(even) {
     background: #eee;
 }
 ::-webkit-scrollbar {
@@ -142,4 +143,59 @@ ul{
 }
 ::-webkit-scrollbar-thumb:hover {
     background: #555; 
+}
+#hidden1_1{
+    display:none;
+    /* max-height: 20%; */
+    width: 70%;
+}
+#hidden1_2{
+    display:none;
+    /* max-height: 20%; */
+    width: 70%;
+}
+#hidden2_1{
+    display:none;
+    /* max-height: 20%; */
+    width: 70%;
+}
+#hidden2_2{
+    display:none;
+    /* max-height: 20%; */
+    width: 70%;
+}
+#piechart,#piechart1,#piechart2,#piechart3{
+    top:25%;
+    position: absolute;
+    display: block;
+    right: -5%;
+}
+#te1{
+    position :relative;
+    top:5%;
+    background-color: #eee;
+    border: none;
+    border-radius: 10px;
+    margin-top: 2.5%;
+    margin-bottom: 2.5%;
+}
+#te2{
+    z-index: 2;
+    position :relative;
+    background-color: #eee;
+    border: none;
+    border-radius: 10px;
+    top:10%;
+}
+#te1 button{
+    background-color: #888;
+    text-align: center;
+    /* padding: 0em; */
+    padding: 0.9em 0em;
+}
+#te2 button{
+    background-color: #888;
+    text-align: center;
+    /* padding: 0em; */
+    padding: 0.9em 0em;
 }
