--- a/qmain.css
+++ b/qmain.css
@@ -220,3 +220,12 @@ tr.shuff{
     left: 0;
     transition-duration: 0.2s;
 }
+#legend ul.legend-labels li span {
+    display: block;
+    float: left;
+    height: 15px;
+    width: 15px;
+    margin-right: 5px;
+    margin-left: 0;
+    border: 1px solid #999;
+}
