--- a/fmain.css
+++ b/fmain.css
@@ -78,7 +78,7 @@ input{
 	min-height: 100%;
 	min-width: 1024px;
 	width: 100%;
-	height: auto;
+	height: 100%;
 	background-repeat: no-repeat center center;
 	position: fixed;
 	top: 0%;
